Remove getColumnNames() implementation